Fix message blocked dialog to be readable

--- a/fb-messenger-dark.css
+++ b/fb-messenger-dark.css
@@ -258,6 +258,9 @@ div._4-i2, div._5a8u, ._4t2a {
 .fcb {
 	color: white !important;
 }
+._c24 {
+	color: #ccc !important;
+}
 .uiBoxGray {
 	background-color: #333 !important;
 	border-color: #2e2e2e;
